--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -110,9 +110,9 @@
         Corte de caja<fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
       </li>
 
-      <!-- <li *ngIf="userRol === 'admin' || userRol === 'medico'" [routerLink]="'/consultas'" routerLinkActive="active" >
+      <li *ngIf="userRol === 'admin' || userRol === 'medico'" [routerLink]="'/consultas'" routerLinkActive="active" >
         Consultas médicas <fa-icon [icon]="'stethoscope'" class="menu-icon"></fa-icon>
-      </li> -->
+      </li>
 
       <!-- <li *ngIf="userRol === 'admin' || userRol === 'medico'">
         Recetas <fa-icon [icon]="'prescription'" class="menu-icon"></fa-icon>
