--- a/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
@@ -56,7 +56,7 @@
 
             <div class="col-md-1">
                 <label class="form-label">Ventas/pág</label>
-                <input type="number" class="form-control" formControlName="limit" min="5" max="200">
+                <input type="number" class="form-control" formControlName="limit" min="5" max="200" (keyup.enter)="buscar(true)">
             </div>
 
             <div class="col-2 text-end" style="margin-top: 1.3rem;">
@@ -68,22 +68,22 @@
             <div class="mt-3 row">
                 <div class="col-md-2">
                     <label class="form-label">Fecha inicial</label>
-                    <input type="date" class="form-control" formControlName="fechaInicial">
+                    <input type="date" class="form-control" formControlName="fechaInicial" (change)="buscar(true)">
                 </div>
 
                 <div class="col-md-2">
                     <label class="form-label">Fecha final</label>
-                    <input type="date" class="form-control" formControlName="fechaFinal">
+                    <input type="date" class="form-control" formControlName="fechaFinal" (change)="buscar(true)">
                 </div>
 
                 <div class="col-md-2">
                     <label class="form-label">Total desde</label>
-                    <input type="number" class="form-control" formControlName="totalDesde" min="0" step="0.01">
+                    <input type="number" class="form-control" formControlName="totalDesde" min="0" step="0.01" (keyup.enter)="buscar(true)">
                 </div>
 
                 <div class="col-md-2">
                     <label class="form-label">Total hasta</label>
-                    <input type="number" class="form-control" formControlName="totalHasta" min="0" step="0.01">
+                    <input type="number" class="form-control" formControlName="totalHasta" min="0" step="0.01" (keyup.enter)="buscar(true)">
                 </div>
 
                 <div class="col-2" style="margin-top: 1.3rem;">
