--- a/frontFarm/src/app/pages/ventas/ventas.component.html
+++ b/frontFarm/src/app/pages/ventas/ventas.component.html
@@ -222,7 +222,7 @@
   </div>
 
   <!-- ===================== MODAL: FICHAS PARA COBRO ===================== -->
-  <!-- <div *ngIf="mostrarModalFichas" class="modal-overlay">
+  <div *ngIf="mostrarModalFichas" class="modal-overlay">
     <div class="modal-content" style="width: 820px; max-width: 98vw;">
 
       <div class="modal-header-custom position-relative mb-2">
@@ -282,12 +282,12 @@
         Tip: “Tomar” <b>agrega sus servicios al carrito</b>.
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- =================== FIN MODAL FICHAS =================== -->
 
 
   <!-- ===================== MODAL: PEDIR FICHA (CAJA) ===================== -->
-  <!-- <div *ngIf="mostrarModalPedirFicha" class="modal-overlay">
+  <div *ngIf="mostrarModalPedirFicha" class="modal-overlay">
     <div class="modal-content" style="width: 800px; max-width: 98vw;">
 
       <div class="modal-header-custom position-relative mb-2">
@@ -433,7 +433,7 @@
       </div>
 
     </div>
-  </div> -->
+  </div>
   <!-- =================== FIN MODAL PEDIR FICHA =================== -->
 
   <div class="ventas-container" [style.--thumb-scale]="thumbScale">
