Filtro ubicación farmacia en Surtir Farmacia, Ingresos x tiempo horas pico tomando en cuenta la utilidad

--- a/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.html
+++ b/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.html
@@ -79,14 +79,14 @@
 <div *ngIf="horaPico">
   🟢 {{ etiquetaAlta }}:
   {{ formatearPeriodo(horaPico.periodo) }} –
-  ${{ horaPico.ingresos }}
+  utilidad: ${{ horaPico.utilidad }}
   ({{ horaPico.ventas }} ventas)
 </div>
 
 <div *ngIf="horaMuerta">
   🔴 {{ etiquetaBaja }}:
   {{ formatearPeriodo(horaMuerta.periodo) }} –
-  ${{ horaMuerta.ingresos }}
+  utilidad: ${{ horaMuerta.utilidad }}
   ({{ horaMuerta.ventas }} ventas)
 </div>
 
