Surtir farmacia: Corrección en columna 'cantidad a surtir' en la hoja de surtido real

--- a/frontFarm/src/app/pages/ventas/ventas.component.html
+++ b/frontFarm/src/app/pages/ventas/ventas.component.html
@@ -13,13 +13,13 @@
     </div>
     <div class="col-6 d-flex justify-content-end gap-2">
 
-     <!--  <button (click)="abrirModalPedirFicha()" class="btn-gris">
+      <button (click)="abrirModalPedirFicha()" class="btn-gris">
         Pedir ficha
       </button>
 
       <button (click)="abrirModalFichasParaCobro()" class="btn-amarillo">
         Cobrar ficha
-      </button> -->
+      </button>
 
       <button (click)="abrirModalConsultaPrecio()" class="btn-gris consultar-precio">
         Consultar Precio
